--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,7 +32,8 @@
         <div class="hero"></div>
         <div class="content">
             <div id="search-engine-optimization" class="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+                <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
+                    alt="a laptop, coffee, magnifying glass, pens and notebook on a wooden table" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they
@@ -41,7 +42,8 @@
                 </p>
             </div>
             <div id="online-reputation-management" class="online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right"
+                    alt="a person holding a smartphone and typing on a laptop" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -51,7 +53,8 @@
                 </p>
             </div>
             <div id="social-media-marketing" class="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left"
+                    alt="a wooden table with several people in their respective electronics" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps
@@ -64,7 +67,8 @@
         <div class="benefits">
             <div class="benefit-lead">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" />
+                <img src="./assets/images/lead-generation.png"
+                    alt="a funnel with money symbol below and a ratchet above" />
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers
                     directly
@@ -73,7 +77,8 @@
             </div>
             <div class="benefit-brand">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" />
+                <img src="./assets/images/brand-awareness.png"
+                    alt="a lamp with a sound effect on the sides that resembles the image of a man in a suit" />
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and
                     visibility
@@ -82,7 +87,7 @@
             </div>
             <div class="benefit-cost">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" />
+                <img src="./assets/images/cost-management.png" alt="a ratchet and circles with money symbol on it" />
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no
                     longer
@@ -92,7 +97,7 @@
         </div>
     </main>
 
-    <footer class="footer">
+    <footer class=" footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
