--- a/Develop/index.html
+++ b/Develop/index.html
@@ -5,33 +5,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>BroadenWay</title>
 </head>
 
 <body>
 
-    <header class="header">
-        <h1>Broad<span class="seo">en</span>Way</h1>
+    <header>
+        <h1>Broad<span class="en">en</span>Way</h1>
         <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+            <nav>
+                <a href="#search-engine-optimization">Search Engine Optimization</a>
+                <a href="#online-reputation-management">Online Reputation Management</a>
+                <a href="#social-media-marketing">Social Media Marketing</a>
+            </nav>
         </div>
     </header>
 
     <main>
         <div class="hero"></div>
-        <div class="content">
-            <div id="search-engine-optimization" class="search-engine-optimization">
+        <section class="content">
+            <article id="search-engine-optimization" class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                     alt="a laptop, coffee, magnifying glass, pens and notebook on a wooden table" />
                 <h2>Search Engine Optimization</h2>
@@ -40,8 +34,8 @@
                     travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
                     your visibility and find the right customers for your business.
                 </p>
-            </div>
-            <div id="online-reputation-management" class="online-reputation-management">
+            </article>
+            <article id="online-reputation-management" class="online-reputation-management">
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                     alt="a person holding a smartphone and typing on a laptop" />
                 <h2>Online Reputation Management</h2>
@@ -51,8 +45,8 @@
                     gives
                     you the control over what potential customers see when they search for your business.
                 </p>
-            </div>
-            <div id="social-media-marketing" class="social-media-marketing">
+            </article>
+            <article id="social-media-marketing" class="social-media-marketing">
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left"
                     alt="a wooden table with several people in their respective electronics" />
                 <h2>Social Media Marketing</h2>
@@ -62,10 +56,10 @@
                     determine which platforms are suited to your brand, using analytics to find the right markets and
                     increase your lead generation.
                 </p>
-            </div>
-        </div>
+            </article>
+        </section>
         <div class="benefits">
-            <div class="benefit-lead">
+            <aside class="benefit-lead">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png"
                     alt="a funnel with money symbol below and a ratchet above" />
@@ -74,8 +68,8 @@
                     directly
                     to your website.
                 </p>
-            </div>
-            <div class="benefit-brand">
+            </aside>
+            <aside class="benefit-brand">
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png"
                     alt="a lamp with a sound effect on the sides that resembles the image of a man in a suit" />
@@ -84,8 +78,8 @@
                     visibility
                     for your business.
                 </p>
-            </div>
-            <div class="benefit-cost">
+            </aside>
+            <aside class="benefit-cost">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="a ratchet and circles with money symbol on it" />
                 <p>
@@ -93,11 +87,11 @@
                     longer
                     need to advertise your page.
                 </p>
-            </div>
+            </aside>
         </div>
     </main>
 
-    <footer class=" footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
