--- a/index.html
+++ b/index.html
@@ -13,19 +13,17 @@
 
     <header>
         <h1>Broad<span class="en">en</span>Way</h1>
-        <div>
-            <nav>
-                <a href="#search-engine-optimization">Search Engine Optimization</a>
-                <a href="#online-reputation-management">Online Reputation Management</a>
-                <a href="#social-media-marketing">Social Media Marketing</a>
-            </nav>
-        </div>
+        <nav>
+            <a href="#search-engine-optimization">Search Engine Optimization</a>
+            <a href="#online-reputation-management">Online Reputation Management</a>
+            <a href="#social-media-marketing">Social Media Marketing</a>
+        </nav>
     </header>
 
     <main>
-        <div class="hero"></div>
-        <section class="content">
-            <article id="search-engine-optimization" class="search-engine-optimization">
+        <img src="./assets/images/digital-marketing-meeting.jpg" alt="group working together" class="hero" />
+        <section class="content-section">
+            <article id="search-engine-optimization" class="content">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                     alt="a laptop, coffee, magnifying glass, pens and notebook on a wooden table" />
                 <h2>Search Engine Optimization</h2>
@@ -35,7 +33,7 @@
                     your visibility and find the right customers for your business.
                 </p>
             </article>
-            <article id="online-reputation-management" class="online-reputation-management">
+            <article id="online-reputation-management" class="content">
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                     alt="a person holding a smartphone and typing on a laptop" />
                 <h2>Online Reputation Management</h2>
@@ -46,7 +44,7 @@
                     you the control over what potential customers see when they search for your business.
                 </p>
             </article>
-            <article id="social-media-marketing" class="social-media-marketing">
+            <article id="social-media-marketing" class="content">
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left"
                     alt="a wooden table with several people in their respective electronics" />
                 <h2>Social Media Marketing</h2>
@@ -58,8 +56,8 @@
                 </p>
             </article>
         </section>
-        <div class="benefits">
-            <aside class="benefit-lead">
+        <section class="benefits-section">
+            <aside class="benefit">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png"
                     alt="a funnel with money symbol below and a ratchet above" />
@@ -69,7 +67,7 @@
                     to your website.
                 </p>
             </aside>
-            <aside class="benefit-brand">
+            <aside class="benefit">
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png"
                     alt="a lamp with a sound effect on the sides that resembles the image of a man in a suit" />
@@ -79,7 +77,7 @@
                     for your business.
                 </p>
             </aside>
-            <aside class="benefit-cost">
+            <aside class="benefit">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="a ratchet and circles with money symbol on it" />
                 <p>
@@ -88,13 +86,13 @@
                     need to advertise your page.
                 </p>
             </aside>
-        </div>
+            </div>
     </main>
 
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h2>Made with ❤️️ by BroadenWay</h2>
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+            &copy; 2019 BroadenWay Social Solution Services, Inc.
         </p>
     </footer>
 
