--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html lang="en-us">
 
 <head>
+    <!-- To add the special characters directly into HTML without their HTML codes (entities) -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Controls the size of the viewport and the zoom level when the page is first loaded -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/style.css" />
     <title>BroadenWay</title>
+    <!-- The rel attribute defines the relationship defined by the link -->
+    <link rel="stylesheet" href="./assets/style.css" />
 </head>
 
 <body>
 
     <header>
+        <!-- Span added for styling purpose -->
         <h1>Broad<span class="en">en</span>Way</h1>
         <nav>
+            <!--The href attribute creates a link to the article ids using the "#" -->
             <a href="#search-engine-optimization">Search Engine Optimization</a>
             <a href="#online-reputation-management">Online Reputation Management</a>
             <a href="#social-media-marketing">Social Media Marketing</a>
@@ -21,9 +26,14 @@
     </header>
 
     <main>
-        <img src="./assets/images/digital-marketing-meeting.jpg" alt="group working together" class="hero" />
+        <figure>
+            <!-- Keep the descriptive alt attributes in case the image cannot be displayed by the user -->
+            <img src="./assets/images/digital-marketing-meeting.jpg" alt="group working together" />
+        </figure>
         <section class="content-section">
-            <article id="search-engine-optimization" class="content">
+            <!-- The id attribute was added to link the nav to the article -->
+            <article id="search-engine-optimization">
+                <!-- The class attribute was added for positioning -->
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                     alt="a laptop, coffee, magnifying glass, pens and notebook on a wooden table" />
                 <h2>Search Engine Optimization</h2>
@@ -33,7 +43,7 @@
                     your visibility and find the right customers for your business.
                 </p>
             </article>
-            <article id="online-reputation-management" class="content">
+            <article id="online-reputation-management">
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                     alt="a person holding a smartphone and typing on a laptop" />
                 <h2>Online Reputation Management</h2>
@@ -44,9 +54,9 @@
                     you the control over what potential customers see when they search for your business.
                 </p>
             </article>
-            <article id="social-media-marketing" class="content">
+            <article id="social-media-marketing">
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left"
-                    alt="a wooden table with several people in their respective electronics" />
+                    alt="a wooden table with several people using their respective electronics" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps
@@ -56,8 +66,10 @@
                 </p>
             </article>
         </section>
+        <!-- Sidebar section -->
         <section class="benefits-section">
-            <aside class="benefit">
+            <!-- The aside element is presented inside the sidebar -->
+            <aside>
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png"
                     alt="a funnel with money symbol below and a ratchet above" />
@@ -67,7 +79,7 @@
                     to your website.
                 </p>
             </aside>
-            <aside class="benefit">
+            <aside>
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png"
                     alt="a lamp with a sound effect on the sides that resembles the image of a man in a suit" />
@@ -77,7 +89,7 @@
                     for your business.
                 </p>
             </aside>
-            <aside class="benefit">
+            <aside>
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="a ratchet and circles with money symbol on it" />
                 <p>
@@ -86,13 +98,14 @@
                     need to advertise your page.
                 </p>
             </aside>
-            </div>
+        </section>
     </main>
 
     <footer>
         <h2>Made with ❤️️ by BroadenWay</h2>
         <p>
-            &copy; 2019 BroadenWay Social Solution Services, Inc.
+            <!-- Changed to unicode -->
+            © 2019 BroadenWay Social Solution Services, Inc.
         </p>
     </footer>
 
