added some comments

--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
+<!-- Declaration of the HTML version (HTML5 and beyond) for the purpose of ensuring that the page is parsed in the same way by different browsers -->
 <!DOCTYPE html>
+<!-- Language in which the page is written -->
 <html lang="en-us">
 
+<!-- Machine-readable information about accessibility, search engines, and performance -->
 <head>
     <!-- To add the special characters directly into HTML without their HTML codes (entities) -->
     <meta charset="UTF-8" />
+    <!-- The http-equiv attribute binds the element to an HTTP response header and
+         the content attribute chooses the version of Internet Explorer in which the page be rendered as -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Controls the size of the viewport and the zoom level when the page is first loaded -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BroadenWay</title>
+    <!-- Describes the page's purpose -->
+    <title> BroadenWay - Social Marketing Solution Services </title>
     <!-- The rel attribute defines the relationship defined by the link -->
     <link rel="stylesheet" href="./assets/style.css" />
 </head>
 
+<!-- Contains the content that is shown to the user -->
 <body>
 
     <header>
@@ -27,7 +34,7 @@
 
     <main>
         <figure>
-            <!-- Keep the descriptive alt attributes in case the image cannot be displayed by the user -->
+            <!-- Keep the descriptive alt attributes in case the image cannot be displayed by the user and also to improve search engine rankings -->
             <img src="./assets/images/digital-marketing-meeting.jpg" alt="group working together" />
         </figure>
         <section class="content-section">
@@ -68,7 +75,7 @@
         </section>
         <!-- Sidebar section -->
         <section class="benefits-section">
-            <!-- The aside element is presented inside the sidebar -->
+            <!-- The aside elements are presented inside the sidebar -->
             <aside>
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png"
@@ -105,7 +112,7 @@
         <h2>Made with ❤️️ by BroadenWay</h2>
         <p>
             <!-- Changed to unicode -->
-            © 2019 BroadenWay Social Solution Services, Inc.
+            © 2019 BroadenWay Social Marketing Solution Services, Inc.
         </p>
     </footer>
 
