added some comments

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- Contains the content that is shown to the user -->
 
 <body>
-
+    <!-- Contains introductory contents of the page, such as logo and navigation bar-->
     <header>
         <!-- Span added for styling purpose -->
         <h1>Broad<span class="en">en</span>Way</h1>
@@ -34,8 +34,9 @@
         </nav>
     </header>
 
+    <!-- Main topic of the website -->
     <main>
-
+        <!-- Self-contained content -->
         <figure>
             <!-- Keep the descriptive alt attributes in case the image cannot be displayed by the user and also to improve search engine rankings -->
             <img src="./assets/images/digital-marketing-meeting.jpg" alt="group working together" />
@@ -46,7 +47,8 @@
                  The class attribute was added to not affect the visual output  -->
             <h2 class="hidden">Description of services offered by BroadenWay</h2>
 
-            <!-- The id attribute has been added to link the nav to its related section -->
+            <!-- Content that makes sense as an independent piece.
+                The id attribute has been added to link the nav to its related section -->
             <section id="search-engine-optimization">
                 <!-- The class attribute was added for positioning -->
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
@@ -83,7 +85,7 @@
                 </p>
             </section>
 
-            <!-- Sidebar section -->
+            <!-- Sidebar -->
             <aside>
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png"
@@ -114,6 +116,7 @@
 
     </main>
 
+    <!-- Contains information about authorship and copyright -->
     <footer>
         <h2>Made with ❤️️ by BroadenWay</h2>
         <p>
