--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- Machine-readable information about accessibility, search engines, and performance -->
 
 <head>
-    <!-- To add the special characters directly into HTML without their HTML codes (entities) -->
+    <!-- This character set allows you to add special characters directly into HTML without their HTML codes (entities) -->
     <meta charset="UTF-8" />
     <!-- The http-equiv attribute binds the element to an HTTP response header and
          the content attribute chooses the version of Internet Explorer in which the page be rendered as -->
@@ -16,7 +16,7 @@
     <!-- Describes the page's purpose -->
     <title> BroadenWay - Social Marketing Solution Services </title>
     <!-- The rel attribute defines the relationship defined by the link -->
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <!-- Contains the content that is shown to the user -->
@@ -27,7 +27,7 @@
         <!-- Span added for styling purpose -->
         <h1>Broad<span class="en">en</span>Way</h1>
         <nav>
-            <!--The href attribute creates a link to the section ids using the "#" -->
+            <!--The href attribute creates a link to the article ids using the "#" -->
             <a href="#search-engine-optimization">Search Engine Optimization</a>
             <a href="#online-reputation-management">Online Reputation Management</a>
             <a href="#social-media-marketing">Social Media Marketing</a>
@@ -38,30 +38,30 @@
     <main>
         <!-- Self-contained content -->
         <figure>
-            <!-- Keep the descriptive alt attributes in case the image cannot be displayed by the user and also to improve search engine rankings -->
+            <!-- Added the descriptive alt attributes in case the image cannot be displayed by the user and also to improve search engine rankings -->
             <img src="./assets/images/digital-marketing-meeting.jpg" alt="group working together" />
         </figure>
 
-        <article>
-            <!-- Each article should include a heading to identify it and is useful for assistive technology users.
+        <section>
+            <!-- Each section should include a heading for identification and is useful for assistive technology users.
                  The class attribute was added to not affect the visual output  -->
             <h2 class="hidden">Description of services offered by BroadenWay</h2>
 
-            <!-- Content that makes sense as an independent piece.
-                The id attribute has been added to link the nav to its related section -->
-            <section id="search-engine-optimization">
+            <!-- The id attribute has been added to link the nav to its related article -->
+            <article id="search-engine-optimization">
                 <!-- The class attribute was added for positioning -->
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                     alt="a laptop, coffee, magnifying glass, pens and notebook on a wooden table" />
+                <!-- Article's identification -->
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they
                     travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
                     your visibility and find the right customers for your business.
                 </p>
-            </section>
+            </article>
 
-            <section id="online-reputation-management">
+            <article id="online-reputation-management">
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                     alt="a person holding a smartphone and typing on a laptop" />
                 <h2>Online Reputation Management</h2>
@@ -71,9 +71,9 @@
                     gives
                     you the control over what potential customers see when they search for your business.
                 </p>
-            </section>
+            </article>
 
-            <section id="social-media-marketing">
+            <article id="social-media-marketing">
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left"
                     alt="a wooden table with several people using their respective electronics" />
                 <h2>Social Media Marketing</h2>
@@ -83,42 +83,41 @@
                     determine which platforms are suited to your brand, using analytics to find the right markets and
                     increase your lead generation.
                 </p>
-            </section>
+            </article>
+            
+        </section>
 
-            <!-- Sidebar -->
-            <aside>
-                <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png"
-                    alt="a funnel with money symbol below and a ratchet above" />
-                <p>
-                    Inbound strategies for lead generation require less work for your business, bringing customers
-                    directly
-                    to your website.
-                </p>
-                <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png"
-                    alt="a lamp with a sound effect on the sides that resembles the image of a man in a suit" />
-                <p>
-                    Users find your business through paid and organic searches, increasing the search ranking and
-                    visibility
-                    for your business.
-                </p>
-                <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="a ratchet and circles with money symbol on it" />
-                <p>
-                    As the search ranking for your business increases, your advertising costs decrease, and you no
-                    longer
-                    need to advertise your page.
-                </p>
-            </aside>
-
-        </article>
+        <!-- Sidebar -->
+        <aside>
+            <h3>Lead Generation</h3>
+            <img src="./assets/images/lead-generation.png" alt="a funnel with money symbol below and a ratchet above" />
+            <p>
+                Inbound strategies for lead generation require less work for your business, bringing customers
+                directly
+                to your website.
+            </p>
+            <h3>Brand Awareness</h3>
+            <img src="./assets/images/brand-awareness.png"
+                alt="a lamp with a sound effect on the sides that resembles the image of a man in a suit" />
+            <p>
+                Users find your business through paid and organic searches, increasing the search ranking and
+                visibility
+                for your business.
+            </p>
+            <h3>Cost Management</h3>
+            <img src="./assets/images/cost-management.png" alt="a ratchet and circles with money symbol on it" />
+            <p>
+                As the search ranking for your business increases, your advertising costs decrease, and you no
+                longer
+                need to advertise your page.
+            </p>
+        </aside>
 
     </main>
 
     <!-- Contains information about authorship and copyright -->
     <footer>
-        <h2>Made with ❤️️ by BroadenWay</h2>
+        <h3>Made with ❤️️ by BroadenWay</h3>
         <p>
             <!-- Changed to unicode -->
             © 2019 BroadenWay Social Marketing Solution Services, Inc.
