updated readme, comments and re-organized css file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Controls the size of the viewport and the zoom level when the page is first loaded -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Describes the page's purpose -->
-    <title> BroadenWay - Social Marketing Solution Services </title>
+    <title> BroadenWay - Social Marketing Solution </title>
     <!-- The rel attribute defines the relationship defined by the link -->
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
@@ -84,7 +84,7 @@
                     increase your lead generation.
                 </p>
             </article>
-            
+
         </section>
 
         <!-- Sidebar -->
@@ -120,7 +120,7 @@
         <h3>Made with ❤️️ by BroadenWay</h3>
         <p>
             <!-- Changed to unicode -->
-            © 2019 BroadenWay Social Marketing Solution Services, Inc.
+            © 2019 BroadenWay Social Marketing Solution, Inc.
         </p>
     </footer>
 
