fixed some errors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- This character set allows you to add special characters directly into HTML without their HTML codes (entities) -->
     <meta charset="UTF-8" />
     <!-- The http-equiv attribute binds the element to an HTTP response header and
-         the content attribute chooses the version of Internet Explorer in which the page be rendered as -->
+         the content attribute chooses the version of Internet Explorer in which the page will be rendered as -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Controls the size of the viewport and the zoom level when the page is first loaded -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -52,7 +52,7 @@
                 <!-- The class attribute was added for positioning -->
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                     alt="a laptop, coffee, magnifying glass, pens and notebook on a wooden table" />
-                <!-- Article's identification -->
+                <!-- Every article should include a heading for identification -->
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they
@@ -117,6 +117,7 @@
 
     <!-- Contains information about authorship and copyright -->
     <footer>
+        <!-- Changed to h3 to follow sequential order -->
         <h3>Made with ❤️️ by BroadenWay</h3>
         <p>
             <!-- Changed to unicode -->
