--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <title> BroadenWay - Social Marketing Solution </title>
     <!-- The rel attribute defines the relationship defined by the link -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <!-- Contains the content that is shown to the user -->
@@ -120,8 +122,8 @@
         <!-- Changed to h3 to follow sequential order -->
         <h3>Made with ❤️️ by BroadenWay</h3>
         <p>
-            <!-- Changed to unicode -->
-            © 2019 BroadenWay Social Marketing Solution, Inc.
+            <!-- All HTML entities begin with an ampersand (&) -->
+            &copy; 2019 BroadenWay Social Marketing Solution, Inc.
         </p>
     </footer>
 
